Fix wrong decoding (longitude calculation) of some MIC-E positions

BUG: 348209
FIXED-IN: Applications/15.04.3
(cherry picked from commit 7a411f40362675ea6ba4813b8baa0f4128b5860d)